testdata/baselines/reference/submodule/conformance/jsxSpreadOverwritesAttributeStrict.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Boolean'.
error TS2318: Cannot find global type 'CallableFunction'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'NewableFunction'.
error TS2318: Cannot find global type 'Number'.
error TS2318: Cannot find global type 'Object'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
file.tsx(1,24): error TS2307: Cannot find module 'react' or its corresponding type declarations.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Boolean'.
!!! error TS2318: Cannot find global type 'CallableFunction'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'NewableFunction'.
!!! error TS2318: Cannot find global type 'Number'.
!!! error TS2318: Cannot find global type 'Object'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
==== file.tsx (1 errors) ====
    import React = require('react');
                           ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    
    interface Props {
        a: number;
        b: number;
        c?: number;
        d?: number;
    }
    
    
    const props: Props = { a: 1, b: 1 };
    const Foo = (props: Props) => <div>{ props.a }</div>;
    
    // ok
    const a1 = <Foo {...props}></Foo>;
    const a2 = <Foo d={1} {...props}></Foo>;
    
    // error
    const b1 = <Foo a={1} {...props}></Foo>;
    const b2 = <Foo a={1} b={2} {...props}></Foo>;
    const b3 = <Foo a={1} d={1} {...props} {...{ d: 1 }}></Foo>;
    const b4 = <Foo a={1} d={1} {...props} {...{ a: 1, d: 1 }}></Foo>;
    